--- a/figaro-schedule-frontend/package.json
+++ b/figaro-schedule-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "figaro-schedule-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://backend:3000",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -17,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-docker": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
